--- a/Dioxus.toml
+++ b/Dioxus.toml
@@ -1,21 +1,17 @@
 [application]
+name = "dioxus_site"
 
 [web.app]
-
-# HTML title tag content
 title = "dioxus_site"
+base_path = ""
 
-# include `assets` in web platform
 [web.resource]
-
-# Additional CSS style files
 style = []
-
-# Additional JavaScript files
 script = []
 
 [web.resource.dev]
-
-# Javascript code file
-# serve: [dev-server] only
+style = []
 script = []
+
+[web.watcher]
+watch_path = ["src", "assets"]
