--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ dioxus-ssr = "0.7.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
+web-sys = { version = "0.3", features = ["Window", "Storage"] }
+chrono = { version = "0.4", features = ["serde"] }
 
 [features]
 default = ["web"]
